--- a/Avalonia_Apps/AA06_ValueConverter2/Directory.Packages.props
+++ b/Avalonia_Apps/AA06_ValueConverter2/Directory.Packages.props
@@ -9,7 +9,7 @@
     <PackageVersion Include="Avalonia" Version="11.3.7" />
     <PackageVersion Include="Avalonia.Headless" Version="11.3.7" />
     <PackageVersion Include="Avalonia.Svg" Version="11.2.0.2" />
-    <PackageVersion Include="Avalonia.Svg.Skia" Version="11.3.0" />
+    <PackageVersion Include="Svg.Controls.Skia.Avalonia" Version="11.3.6.2" />
     <PackageVersion Include="Avalonia.Themes.Fluent" Version="11.3.7" />
     <PackageVersion Include="Avalonia.Fonts.Inter" Version="11.3.7" />
     <PackageVersion Include="Avalonia.Diagnostics" Version="11.3.7" />
@@ -18,10 +18,10 @@
     <PackageVersion Include="Avalonia.Browser" Version="11.3.7" />
     <PackageVersion Include="Avalonia.Android" Version="11.3.7" />
     <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
-    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.10" />
     <PackageVersion Include="NSubstitute" Version="5.3.0" />
     <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.1" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
-    <PackageVersion Include="MSTest" Version="4.0.0" />
+    <PackageVersion Include="MSTest" Version="4.0.1" />
   </ItemGroup>
 </Project>
