--- a/Avalonia_Apps/AA09_DialogBoxes/Directory.Packages.props
+++ b/Avalonia_Apps/AA09_DialogBoxes/Directory.Packages.props
@@ -17,12 +17,13 @@
     <PackageVersion Include="Avalonia.iOS" Version="11.3.7" />
     <PackageVersion Include="Avalonia.Browser" Version="11.3.7" />
     <PackageVersion Include="Avalonia.Android" Version="11.3.7" />
-		<PackageVersion Include="MsBox.Avalonia" Version="3.0.0-rc2" />
-		<PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
+    <PackageVersion Include="MsBox.Avalonia" Version="3.0.0-rc2" />
+    <PackageVersion Include="CommunityToolkit.Mvvm" Version="8.4.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="9.0.9" />
     <PackageVersion Include="NSubstitute" Version="5.3.0" />
     <PackageVersion Include="Xamarin.AndroidX.Core.SplashScreen" Version="1.0.1.1" />
     <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
-    <PackageVersion Include="MSTest" Version="4.0.0" />
+    <PackageVersion Include="MSTest" Version="4.0.1" />
+    <PackageVersion Include="Coverlet.Collector" Version="6.0.4" />
   </ItemGroup>
 </Project>
