--- a/Avalonia_Apps/AA16_UserControl/AA16_UserControl1Tests/AA16_UserControl1_Tests.csproj
+++ b/Avalonia_Apps/AA16_UserControl/AA16_UserControl1Tests/AA16_UserControl1_Tests.csproj
@@ -11,9 +11,9 @@
 	  <Compile Remove="Properties\SettingsTests.cs" />
 	</ItemGroup>
 	<ItemGroup>
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.0" />
-		<PackageReference Include="MSTest" Version="3.11.0" />
-		<PackageReference Include="coverlet.collector" Version="6.0.4">
+		<PackageReference Include="Microsoft.NET.Test.Sdk" />
+		<PackageReference Include="MSTest" />
+		<PackageReference Include="Coverlet.Collector">
 			<PrivateAssets>all</PrivateAssets>
 			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
