--- a/Avalonia_Apps/AA18_MultiConverter/AA18_MultiConverters/AA18_MultiConverters.csproj
+++ b/Avalonia_Apps/AA18_MultiConverter/AA18_MultiConverters/AA18_MultiConverters.csproj
@@ -1,21 +1,28 @@
 ﻿<Project>
-	<Import Project="..\MVVM_Tutorial_net.props" />
+	<Import Project="..\Application.props" />
 
 	<PropertyGroup>
-    <OutputType>WinExe</OutputType>
-		<TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows;net9.0-windows</TargetFrameworks>
-    <UseWPF>true</UseWPF>
-  </PropertyGroup>
-  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
-  <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
-  <ItemGroup>
-    <Compile Remove="obj\**" />
-    <EmbeddedResource Remove="obj\**" />
-    <None Remove="obj\**" />
-    <Page Remove="obj\**" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\Libraries\MVVM_BaseLib\MVVM_BaseLib.csproj" />
-  </ItemGroup>
-
+ <OutputType>WinExe</OutputType>
+		<TargetFrameworks>net8.0;net9.0</TargetFrameworks>
+ <Nullable>enable</Nullable>
+ <ImplicitUsings>enable</ImplicitUsings>
+ <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+ <RootNamespace>AA18_MultiConverter</RootNamespace>
+ </PropertyGroup>
+ <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
+ <Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
+ <ItemGroup>
+ <Compile Remove="obj\**" />
+ <EmbeddedResource Remove="obj\**" />
+ <None Remove="obj\**" />
+ </ItemGroup>
+ <ItemGroup>
+ <PackageReference Include="Avalonia" />
+ <PackageReference Include="Avalonia.Desktop" />
+ <PackageReference Include="Avalonia.Themes.Fluent" />
+ <PackageReference Include="Avalonia.Fonts.Inter" />
+ <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+ <PackageReference Include="CommunityToolkit.Mvvm" />
+ <PackageReference Include="Avalonia.Diagnostics" Condition="'$(Configuration)' == 'Debug'" />
+ </ItemGroup>
 </Project>
