--- a/CSharpBible/MVVM_Tutorial/MVVM_06_Converters_4Tests/MVVM_06_Converters_4Tests.csproj
+++ b/CSharpBible/MVVM_Tutorial/MVVM_06_Converters_4Tests/MVVM_06_Converters_4Tests.csproj
@@ -21,6 +21,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MVVM_06_Converters_4\MVVM_06_Converters_4.csproj" />
 	  <ProjectReference Include="$(UpDir)\Libraries\MVVM_BaseLibTests\MVVM_BaseLibTests.csproj" />
+    <ProjectReference Include="$(UpDir)\Libraries\MathLIbrary\MathLibrary.csproj" />
   </ItemGroup>
 
 </Project>
