--- a/Avalonia_Apps/Libraries/BaseLibTests/BaseLibTests.csproj
+++ b/Avalonia_Apps/Libraries/BaseLibTests/BaseLibTests.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
     <TargetFrameworks>net8.0;net481;net48;net472;net462</TargetFrameworks>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
 	</PropertyGroup>
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.props" />
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
