--- a/Avalonia_Apps/AA14_ScreenX/AA14_ScreenX/AA14_ScreenX.csproj
+++ b/Avalonia_Apps/AA14_ScreenX/AA14_ScreenX/AA14_ScreenX.csproj
@@ -11,7 +11,7 @@
 	<Import Sdk="Microsoft.NET.Sdk" Project="Sdk.targets" />
 
   <ItemGroup>
-    <PackageReference Include="Avalonia"  />
+    <PackageReference Include="Avalonia" />
     <PackageReference Include="Avalonia.Desktop" />
     <PackageReference Include="Avalonia.Themes.Fluent" />
     <PackageReference Include="Avalonia.Fonts.Inter" />
@@ -21,6 +21,13 @@
 
   <ItemGroup>
     <ProjectReference Include="..\ScreenX.Base\ScreenX.Base.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageVersion Update="Avalonia" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Desktop" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Fonts.Inter" Version="11.3.9" />
+    <PackageVersion Update="Avalonia.Themes.Fluent" Version="11.3.9" />
   </ItemGroup>
 
 </Project>
